git-tasks: add missing file statuses to getPRFiles action